# cookiecutter-uv-core

./: .gitignore  LICENSE  README.rst  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  Changelog  LICENSE  Makefile  README.rst  mypy.ini  pylintrc  pyproject.toml  pytest.ini  ruff.toml  venv  {{ cookiecutter.repo_name }}.sublime-project
{{ cookiecutter.repo_name }}/docker/: Dockerfile.x86_64  docker-compose.yml
{{ cookiecutter.repo_name }}/docker/scripts/: wait_for_pg.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __init__.py  __main__.py  logging.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/app/: __init__.py  __main__.py  _exceptions.py  runtime.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/app/cli/: __init__.py  _decorators.py  _lazy.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/app/cli/commands/: run.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/app/core/: config.py  utils.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/app/db/: database.py
{{ cookiecutter.repo_name }}/tests/: conftest.py  utils.py
{{ cookiecutter.repo_name }}/tests/main/: conftest.py  test_config.py  test_logging.py
{{ cookiecutter.repo_name }}/tests/main/app/core/: test_config.py
{{ cookiecutter.repo_name }}/tests/main/app/db/: conftest.py  test_database.py
{{ cookiecutter.repo_name }}/tests/system/: conftest.py  test_database.py
