[project]
name = "{{ cookiecutter.service_name }}"
version = "{{ cookiecutter.version }}"
# Dynamic versioning is currently disabled due to:
# https://github.com/astral-sh/uv/issues/8714
#
# dynamic = ["version"]

description = "{{ cookiecutter.brief }}"
license = "{{ cookiecutter.license }}"  # <- or "LicenseRef-Proprietary"
license-files = [
    "LICENSE",
]
authors = [
    { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" },
]
maintainers = [
    { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" },
]
readme = "README.rst"
homepage = "{{ cookiecutter.url }}"
repository = "{{ cookiecutter.repository }}"
documentation = ""
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: {{ cookiecutter.python_majmin }}",
]
requires-python = "~={{ cookiecutter.python_version }}"
dependencies = [
    "alembic~=1.17.1",
    "celery~=5.5.3",
    "click~=8.3.0",
    "fastapi~=0.120.4",
    "httpx~=0.28.1",
    "jinja2~=3.1.6",
    "pydantic-settings~=2.11.0",
    "pydantic~=2.12.3",
    "redis~=7.0.1",
    "rich~=14.2.0",
    "sqlalchemy[postgresql-asyncpg,mypy]~=2.0.44",
    "structlog~=25.5.0",
    "uvicorn[standard]~=0.38.0",
]

[project.optional-dependencies]

[project.scripts]
# Defines entry points for command-line execution.
# Example: `[uv run] {{ cookiecutter.service_name }}` to run the package.

{{ cookiecutter.service_name }} = "{{ cookiecutter.repo_name }}.app.__main__:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# The following directory structure is assumed for the source layout:
#
# pyproject.toml
# src
# └── foo
#     ├── __init__.py
#     ├── bar
#     │   └── __init__.py
#     └── baz
#         └── __init__.py
module-name = "{{ cookiecutter.repo_name }}"
namespace = false

# When building a source distribution, all files matching the specified
# patterns are included:
source-include = []

# The default exclusions (__pycache__, *.pyc, and *.pyo) are disabled when the
# following are explicitly specified:
source-exclude = []

# When building a wheel, all directories listed below are included.
# For details, see:
# https://docs.astral.sh/uv/reference/settings/#build-backend_data
data = []

[tool.uv]
# Setting `tool.uv.package = true` forces the project to be built and installed
# into the project environment.
package = true

default-groups = ["dev"]

[dependency-groups]
dev = [
    { include-group = "types" },
    { include-group = "check" },
    { include-group = "test" },

    "icecream>=2.1.8",
    "sqlalchemy[postgresql-asyncpg,mypy]~=2.0.44",
    "watchfiles>=1.1.1",
]
types = [
    "types-PyYAML",
    "types-Pygments",
    "types-colorama",
    "types-greenlet",
]
check = [
    "deptry==0.23.1",
    "mypy==1.18.2",
    "pylint==4.0.2",
    "ruff==0.14.3",
]
test = [
    "pytest-asyncio~=1.2.0",
    "pytest-repeat>=0.9.4",
    "pytest~=8.4.2",
]

[tool.deptry.per_rule_ignores]
DEP001 = [
    # Imported but missing from the dependency definitions.

    # The application itself shouldn't be specified as a dependency.
    "{{ cookiecutter.service_name }}",
]
DEP002 = [
    # Defined as a dependency but not used in the codebase.

    "rich",  # <- enhances `structlog` library
    "uvicorn",
]
DEP004 = [
    # Imported but declared as a dev dependency.
    "pytest",
]
